Fix whitespace and padding on jobs list

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@ body {
   background-color: #d50099;
   color: white;
   height: 100%;
-  overflow: hidden;
 }
 
 body {
